--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "rome check ./src --apply",
+    "lint:fix": "rome check ./src --apply-unsafe",
+    "format": "rome format ./src --write",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,14 +18,10 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
+    "rome": "12.0.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
