--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,6 +15,8 @@ jobs:
     
       - name: ⬇️ [SETUP] Rome
         uses: rome/setup-rome@v0.4
+        with:
+          version: latest
 
       - name: 🕵🏻‍♀️ [RUN] Rome
         run: rome ci ./src
