--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "rome check ./src --apply",
     "lint:fix": "rome check ./src --apply-unsafe",
     "format": "rome format ./src --write",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "e2e": "cypress run --headed --no-exit --browser firefox"
   },
   "dependencies": {
     "axios": "1.3.6",
+    "cypress": "^12.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
