--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-toastify": "9.1.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
